<resources>
    <string name="app_name">去哪玩桌遊 GO</string>
    <string name="title_activity_maps">Map</string>

    <!-- for facebook sdk -->
    <string name="facebook_app_id">1855282734753651</string>

    <string name="google_play_service_miss">沒有GooglePlay服務</string>

    <string name="main_welcome_tab_home">首頁</string>
    <string name="main_welcome_tab_map">GO</string>
    <string name="main_welcome_tab_find_someone">揪團去</string>
    <string name="main_welcome_tab_report">我要回報</string>
    <string name="main_welcome_tab_custom_find_person">自訂揪團</string>
    <string name="main_welcome_tab_store_find_person">桌遊店揪團</string>
    <string name="main_welcome_tab_board_game_knowledge">桌遊小知識</string>

    <string-array name="main_welcome_button_list">
        <item>前往桌遊店地圖</item>
        <item>查看揪團列表</item>
        <item>桌遊店揪團</item>
        <item>自訂揪團</item>
        <item>回報桌遊店資訊</item>
        <item>使用者資訊</item>
        <item>建議事項</item>
        <item>桌遊小知識</item>
    </string-array>

    <string name="update_dialog_title">建議更新</string>
    <string name="update_dialog_message">已有新版的APP，建議您前往更新下載。以獲得更完善的服務</string>


    <string name="waitting">請稍候</string>
    <string name="no_internet">網路未連線，請開啟網路</string>
    <string name="welcome_title">~看看附近哪兒有桌遊店~</string>
    <string name="go">GO</string>
    <string name="gotoMap">前往桌遊店地圖</string>
    <string name="gotoPlayerRoom">查看揪團列表</string>
    <string name="report_store_info">回報桌遊店資訊</string>
    <string name="data_update">資料更新日期：%s</string>

    <string name="please_argue_location_permission">請同意權限，否則無法開啟地圖，謝謝</string>

    <string name="my_location">我的位置</string>
    <string name="confirm">確認</string>
    <string name="upload">回報上傳</string>
    <string name="i_know">我知道了</string>
    <string name="close">關閉</string>
    <string name="cancel">取消</string>
    <string name="determine">確定</string>
    <string name="goto_update">前往更新</string>
    <string name="preview">預覽</string>
    <string name="loading">資料讀取中&#8230;</string>


    <string name="menu_report">我要回報</string>
    <string name="menu_room_list">哪裡有團</string>
    <string name="menu_issue_report">建議事項</string>

    <!--report Activity -->
    <string name="store_name">桌遊店名稱</string>
    <string name="store_address">桌遊店地址</string>
    <string name="report_dialog_error_data_message">哎呀，您是不是忘了填資料了?</string>
    <string name="report_dialog_thanks_title">感謝您熱心回報</string>
    <string name="report_dialog_thanks_message">最慢約7個工作天\n人工審查完成後，桌遊地圖將會更新\n記得按下回報上傳喔!</string>
    <string name="report_success">回報成功</string>

    <string-array name="store_status">
        <item>我發現新桌遊店了!</item>
        <item>這家桌遊店再也不開了QQ</item>
        <item>這家桌遊店搬新家了~</item>
    </string-array>

    <!--Login Activity -->
    <string name="login_title">使用者資訊</string>
    <string name="login_account">帳號</string>
    <string name="login_password">密碼</string>
    <string name="login_logout">登出帳號</string>
    <string name="login_fail">登入失敗!</string>
    <string name="login_with_gmail">使用 Gmail 帳號登入</string>
    <string name="login_description">您可以透過下列方式登入\n以便使用更多功能</string>
    <string name="login_already_login">已登入</string>
    <string name="login_already_login_facebook">Facebook帳號 已登入</string>
    <string name="login_already_login_google">Gmail帳號 已登入</string>
    <string name="login_play_room_status_title">揪團狀態</string>


    <!--Map Activity-->
    <string name="map_choose_button_find_person">我要揪團</string>
    <string name="map_choose_button_who_play">誰在揪團</string>

    <!--Find person Activity-->
    <string name="findperson_place">"揪團地點：%s"</string>
    <string name="findperson_date">"揪團日期：%s"</string>
    <string name="findperson_date_and_time">日期時間</string>
    <string name="findperson_initiator">主揪稱呼</string>
    <string name="findperson_contact">聯絡方式</string>

    <string-array name="findperson_item_title_list">
        <item>主揪稱呼或團名*</item>
        <item>時間*</item>
        <item>聯絡方式*</item>
        <item>其他注意事項</item>
    </string-array>

    <string-array name="findperson_item_hint_list">
        <item>主揪 阿翔 歡樂新手團</item>
        <item>13:00&#8211;20:00</item>
        <item>手機號碼、Line Id等</item>
        <item>店家消費方式、禁帶外食、報名方式等</item>
    </string-array>

    <string-array name="findperson_person_number">
        <item>不顯示</item>
        <item>1人</item>
        <item>2人</item>
        <item>3人</item>
        <item>4人</item>
        <item>5人</item>
        <item>6人</item>
        <item>7人</item>
        <item>8人</item>
        <item>9人</item>
        <item>10人</item>
        <item>11人</item>
        <item>12人</item>
        <item>13人</item>
        <item>14人</item>
        <item>15人</item>
        <item>16人</item>
        <item>17人</item>
        <item>18人</item>
        <item>19人</item>
        <item>20人</item>
        <item>21人以上</item>

    </string-array>

    <string name="findperson_success_title">完成揪團</string>
    <string name="findperson_success_message">可以至揪團列表查看揪團訊息了!</string>
    <string name="findperson_dialog_error_data_message">哎呀，您是不是忘了填*欄位資料了?</string>

    <!--Custom find person Activity-->
    <string name="custom_findperson_title">自訂揪團</string>
    <string name="custom_findperson_place_title">揪團地點*</string>
    <string name="custom_findperson_place_hint">一品萱泡沫紅茶店</string>
    <string name="custom_findperson_input_address">輸入地址</string>
    <string name="custom_findperson_address_title">揪團地址</string>
    <string name="custom_findperson_address_hint">XX市XX區XX路XX號(非必填)</string>
    <string name="custom_findperson_current_person">目前人數：</string>
    <string name="custom_findperson_need_person">徵求人數：</string>
    <string name="custom_findperson_initiator_title">主揪稱呼或團名*</string>
    <string name="custom_findperson_initiator_hint">主揪 阿翔 歡樂新手團</string>
    <string name="custom_findperson_time_title">時間*</string>
    <string name="custom_findperson_time_hint">13:00&#8211;20:00</string>
    <string name="custom_findperson_contact_title">聯絡方式*</string>
    <string name="custom_findperson_contact_hint">手機號碼、Line Id等</string>
    <string name="custom_findperson_other_title">其他注意事項</string>
    <string name="custom_findperson_other_hint">店家消費方式、禁帶外食、報名方式等</string>
    <string name="custom_findperson_position_preview">地圖預覽</string>
    <string name="custom_findperson_dialog_error_empty_address_message">尚未輸入地址\n無法顯示位置!</string>
    <string name="custom_findperson_dialog_error_empty_store_message">請輸入揪團地點!</string>
    <string name="custom_findperson_empty_place">請按我輸入地點</string>
    <string name="custom_findperson_dialog_error_data_message">哎呀，您是不是忘了填*欄位資料或「揪團地點」了?</string>

    <!--StoreList Activity-->
    <string name="store_findperson_title">桌遊店揪團</string>
    <!--PlayerRoomList Activity-->
    <string name="player_room_list_title">揪團列表</string>
    <string name="player_room_detail_content_title">其他注意事項</string>
    <string name="player_room_empty_message">目前尚未有人揪團</string>
    <string name="player_room_empty_message_by_store">此地點目前尚未有人揪團</string>

    <!--IssueReport Activity-->
    <string name="issue_report_user_title">您的建議：</string>
    <string name="issue_report_system_title">系統回覆：</string>
    <string name="issue_report_system_default_answer">已收到您的建議，謝謝</string>
    <string name="issue_report_clean">清除建議</string>
    <string name="issue_report_clean_confirm_dialog_title">貼心提醒</string>
    <string name="issue_report_clean_confirm_dialog_message">確定要清空您的建議?\n系統將不會紀錄此則建議</string>


</resources>
