<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:id="@+id/tl_main_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabBackground="@color/com_facebook_blue"
        app:tabTextColor="@color/white"
        app:tabIndicatorColor="@color/black"
        app:tabSelectedTextColor="@color/yellow">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_welcome_tab_home" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_welcome_tab_map" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_find_someone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_welcome_tab_find_someone" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_welcome_tab_report" />

    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:layout_below="@id/tl_main_welcome"
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>