<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/login_account" />

    <EditText
        android:id="@+id/et_login_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        style="@style/NormalMargin"
        android:padding="6dp"
        android:background="@drawable/corner_rect_blue_frame"
        android:maxLines="3" />

    <TextView
        android:id="@+id/tv_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/login_password" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NormalMargin"
        android:padding="6dp"
        android:textSize="16sp"
        android:background="@drawable/corner_rect_blue_frame"
        android:maxLines="3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_login_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/btn_login_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_logout"/>

</LinearLayout>