<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_report_store_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:entries="@array/store_status"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:spinnerMode="dropdown" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_rect_blue_frame"
        android:layout_alignTop="@id/spinner_report_store_status"
        android:layout_alignBottom="@id/spinner_report_store_status"
        android:layout_alignRight="@id/spinner_report_store_status"
        android:layout_alignLeft="@id/spinner_report_store_status"
        android:layout_alignStart="@id/spinner_report_store_status"
        android:layout_alignEnd="@id/spinner_report_store_status"/>

    <TextView
        android:id="@+id/tv_report_store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_report_store_status"
        android:layout_marginTop="6dp"
        android:text="@string/store_name" />

    <EditText
        android:id="@+id/et_report_store_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_report_store_name" />

    <TextView
        android:id="@+id/tv_report_store_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_report_store_name"
        android:text="@string/store_address" />

    <EditText
        android:id="@+id/et_report_store_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_report_store_address" />

    <Button
        android:id="@+id/btn_report_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/confirm" />


</RelativeLayout>