<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/login_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/login_description"
        android:textColor="@color/deep_gray"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_login_button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_description"
        android:orientation="vertical"
        tools:visibility="gone">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_facebook_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="14dp"
            android:paddingTop="14dp" />

        <Button
            android:id="@+id/btn_google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_welcome_button"
            android:text="@string/login_with_gmail"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_user_info_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_description"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_blue_frame_button"
        android:padding="4dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_user_info_play_room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_play_room_status_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_user_info_play_room_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_info_play_room_title"
            android:layout_marginTop="4dp"
            android:layout_toLeftOf="@+id/switch_control_room_status"
            android:layout_toStartOf="@+id/switch_control_room_status"
            android:ellipsize="end"
            android:lines="1"
            android:padding="4dp" />

        <TextView
            android:id="@+id/tv_user_info_play_room_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_info_play_room_name"
            android:layout_marginTop="4dp"
            android:layout_toLeftOf="@+id/switch_control_room_status"
            android:layout_toStartOf="@+id/switch_control_room_status"
            android:ellipsize="end"
            android:padding="4dp" />

        <!--<Switch-->
        <!--android:id="@+id/switch_control_room_status"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginLeft="4dp"-->
        <!--android:layout_marginRight="4dp"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_below="@id/tv_user_info_play_room_title"-->
        <!--android:layout_alignBottom="@id/tv_user_info_play_room_date"-->
        <!--android:textOff="缺"-->
        <!--android:textOn="滿" />-->

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_control_room_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_user_info_play_room_date"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tv_user_info_play_room_title"
            android:layout_centerVertical="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:textOff="缺"
            android:textOn="滿"
            android:thumb="@drawable/selector_switch_thumb"
            app:showText="true"
            app:thumbTextPadding="8dp"
            app:track="@drawable/selector_switch_track" />


        <android.support.constraint.ConstraintLayout
            android:id="@+id/user_info_current_person_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_info_play_room_date"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/tv_user_info_current_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/custom_findperson_current_person"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_user_info_current_person"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/spinner_user_info_current_person"
                app:layout_constraintTop_toTopOf="@+id/spinner_user_info_current_person" />

            <Spinner
                android:id="@+id/spinner_user_info_current_person"
                android:layout_width="120dp"
                android:layout_height="24dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:entries="@array/findperson_person_number"
                android:spinnerMode="dialog"
                app:layout_constraintLeft_toRightOf="@+id/tv_user_info_current_person"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/corner_rect_primary_frame"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_user_info_current_person"
                app:layout_constraintLeft_toLeftOf="@+id/spinner_user_info_current_person"
                app:layout_constraintRight_toRightOf="@+id/spinner_user_info_current_person"
                app:layout_constraintTop_toTopOf="@+id/spinner_user_info_current_person" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_info_current_person_area"
            android:layout_marginTop="6dp">

            <TextView
                android:id="@+id/tv_user_info_need_person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="@string/custom_findperson_need_person"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_user_info_need_person"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/spinner_user_info_need_person"
                app:layout_constraintTop_toTopOf="@+id/spinner_user_info_need_person" />

            <Spinner
                android:id="@+id/spinner_user_info_need_person"
                android:layout_width="120dp"
                android:layout_height="24dp"
                android:layout_margin="4dp"
                android:entries="@array/findperson_person_number"
                android:spinnerMode="dialog"
                app:layout_constraintLeft_toRightOf="@+id/tv_user_info_need_person"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/corner_rect_primary_frame"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_user_info_need_person"
                app:layout_constraintLeft_toLeftOf="@+id/spinner_user_info_need_person"
                app:layout_constraintRight_toRightOf="@+id/spinner_user_info_need_person"
                app:layout_constraintTop_toTopOf="@+id/spinner_user_info_need_person" />

        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_sign_out"
        android:layout_below="@id/login_description"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateDrawable="@drawable/progress_green"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/selector_blue_frame_button"
        android:text="@string/login_logout" />

</RelativeLayout>